<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/nombreCalendario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:hint="@string/set_nombre_calendario" />

    <TextView
        android:id="@+id/text_view_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="9dp"
        android:layout_toLeftOf="@+id/nombreCalendario"
        android:text="@string/nombre_calendario_textView"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerTipoCalendario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/nombreCalendario"
        android:layout_marginBottom="25dp"
        android:entries="@array/tipo_calendario"
        android:prompt="@string/string_spinner_tipo_calendario" />

    <TextView
        android:id="@+id/text_view_horario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/nombreCalendario"
        android:layout_toLeftOf="@+id/spinnerTipoCalendario"
        android:text="@string/horario_textView"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/desdeFechaPicker"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/spinnerTipoCalendario"
        android:layout_marginBottom="25dp"
        android:focusable="false"
        android:hint="@string/set_desde_fecha" />

    <TextView
        android:id="@+id/text_view_hasta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spinnerTipoCalendario"
        android:layout_marginTop="9dp"
        android:layout_toLeftOf="@+id/nombreCalendario"
        android:text="@string/desde_textView"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/hastaFechaPicker"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/desdeFechaPicker"
        android:layout_marginBottom="25dp"
        android:focusable="false"
        android:hint="@string/set_hasta_fecha" />

    <TextView
        android:id="@+id/text_view_desde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/desdeFechaPicker"
        android:layout_marginTop="9dp"
        android:layout_toLeftOf="@+id/nombreCalendario"
        android:text="@string/hasta_textView"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerHoraCalendarioInicial"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hastaFechaPicker"
        android:layout_marginBottom="55dp"
        android:entries="@array/horas_calendario"
        android:prompt="@string/string_spinner_horas_calendario" />

    <TextView
        android:id="@+id/text_view_hora_inicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/hastaFechaPicker"
        android:layout_marginBottom="50dp"
        android:layout_toLeftOf="@+id/spinnerHoraCalendarioInicial"
        android:text="@string/hora_inicial_textView"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerHoraCalendarioFinal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/spinnerHoraCalendarioInicial"
        android:layout_marginBottom="25dp"
        android:entries="@array/horas_calendario"
        android:prompt="@string/string_spinner_horas_calendario" />

    <TextView
        android:id="@+id/text_view_hora_final"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spinnerHoraCalendarioInicial"
        android:layout_toLeftOf="@+id/spinnerHoraCalendarioFinal"
        android:text="@string/hora_final_textView"
        android:textSize="20sp" />

    <Button
        android:id="@+id/listo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="#0D98FF"
        android:text="@string/listo"
        android:textColor="#FFFFFF" />
</RelativeLayout>
