<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/text_view_mantener_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/consejo_codigo_calendario" />

    <EditText
        android:id="@+id/codigo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:hint="@string/codigo_calendario_edit_text"
        android:layout_below="@+id/text_view_mantener_dia"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/copiarBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/codigo"
        android:background="@color/colorAccent"
        android:text="@string/copiar"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/listoCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="#0D98FF"
        android:text="@string/listo"
        android:textColor="#FFFFFF" />
</RelativeLayout>
