<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/text_view_mantener_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/consejo_ver_calendario" />

    <EditText
        android:id="@+id/codigoVer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:hint="@string/codigo_calendario_edit_text"
        android:layout_below="@+id/text_view_mantener_dia"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_view_nombre_usuario_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nombreVer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:text="@string/nombre_ver_calendario"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/listoCodigoVer">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center" />
    </FrameLayout>

    <EditText
        android:id="@+id/nombreVer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/codigoVer"
        android:layout_alignStart="@+id/codigoVer"
        android:layout_centerVertical="true"
        android:hint="@string/nombre_usuario_edit_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/listoCodigoVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="#0D98FF"
        android:text="@string/listo"
        android:textColor="#FFFFFF" />
</RelativeLayout>
