<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollojt"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_view_mantener_dia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="left"
                android:textSize="20sp"
                android:text="@string/dias_comunes" />

            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/listcomunesview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/divider"
                android:dividerHeight="16.0dp"
                android:layout_below="@+id/text_view_mantener_dia" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/emptyElement"
                android:text="@string/dias_comunes_vacios"
                android:textStyle="bold"
                android:textSize="15sp"
                android:visibility="gone"
                android:layout_below="@id/text_view_mantener_dia"
                android:textColor="@android:color/darker_gray"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="10">

        <Button
            android:id="@+id/listoCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#0D98FF"
            android:text="@string/listo"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

</LinearLayout>