<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.uv.jaimediazgonzalez.facilquedar.ventanas.PantallaInicial">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/crearCalendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear_calendario"
                android:layout_marginBottom="25dp"
                android:background="#0D98FF"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/verCalendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_calendario"
                android:layout_marginBottom="25dp"
                android:background="#0D98FF"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/misCalendarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mis_calendarios"
                android:layout_marginBottom="25dp"
                android:background="#0D98FF"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4541521919567374/2781438831">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
